# emend

./: .editorconfig  .gitignore  .swiftformat  .swiftlint.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  justfile  lefthook.yml
.github/workflows/: ci.yml
.sdd/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  SECURITY.md  STACK.md  STRUCTURE.md  TESTING.md
.sdd/memory/: constitution.md
app/Emend/: project.yml
app/Emend/Emend/: ContentView.swift  Emend.entitlements  EmendApp.swift
app/Emend/Emend/AI/: AIConfig.swift  AISettingsView.swift  SummaryView.swift
app/Emend/Emend/Editor/: AutosaveController.swift  ConflictController.swift  EditorCoordinator.swift  FormattingCommands.swift  ImageDrop.swift  MarkdownEditorView.swift  SmartLists.swift  SyntaxAttributing.swift  TaskCheckbox.swift
app/Emend/Emend/Info/: InfoModel.swift  InfoSidebarView.swift
app/Emend/Emend/Links/: WikiLinkAutocomplete.swift
app/Emend/Emend/Platform/: KeychainStore.swift  SecurityScopedBookmarks.swift
app/Emend/Emend/Preview/: PDFExport.swift  PreviewModel.swift  PreviewWebView.swift  ScrollSync.swift
app/Emend/Emend/QuickOpen/: QuickOpenModel.swift  QuickOpenView.swift
app/Emend/Emend/Resources/preview/: VERSIONS.md  bridge.js  template.html  theme.css
app/Emend/Emend/Settings/: Typography.swift  TypographyModel.swift  TypographySettingsView.swift
app/Emend/Emend/Shell/: MainWindow.swift
app/Emend/Emend/Sidebar/: FolderIconPicker.swift  OutlineDragDrop.swift  WorkspaceModel.swift  WorkspaceNode.swift  WorkspaceOutlineView.swift
app/Emend/Emend/Tabs/: TabBarView.swift  TabModel.swift
app/Emend/EmendTests/: BookmarkResolutionTests.swift  EditorPersistenceTests.swift  EmendCoreLinkageTests.swift  FormattingCommandsTests.swift  InfoSidebarTests.swift  KeychainStoreTests.swift  LinkHelpersTests.swift  LinksFlowTests.swift  MemoryReleaseTests.swift  PreviewExportTests.swift  QuickOpenTests.swift  SmartListsTests.swift  SyntaxAttributingTests.swift  TypographyTests.swift  WorkspaceFlowTests.swift
crates/emend-bench/: Cargo.toml
crates/emend-bench/benches/: highlight.rs  open_doc.rs  quick_open.rs  smoke.rs
crates/emend-bench/src/: lib.rs
crates/emend-core/: Cargo.toml
crates/emend-core/assets/: syntaxes-themes.packdump
crates/emend-core/examples/: gen_syntect_dump.rs
crates/emend-core/src/: ai.rs  derived.rs  document.rs  error.rs  fs.rs  index.rs  lib.rs  parse.rs  search.rs  settings.rs  watcher.rs  workspace.rs
crates/emend-core/src/parse/: code_highlight.rs  embed.rs  highlight.rs  preview.rs
crates/emend-core/tests/: ai_privacy.rs  ai_sse.rs  concurrency.rs  derived_stats.rs  document.rs  embeds.rs  fs_atomic.rs  index.rs  large_file.rs  links.rs  parse_incremental.rs  path_identity.rs  preview_offline.rs  preview_render.rs  search_supersede.rs  settings.rs  watcher.rs  workspace_ops.rs
crates/emend-ffi/: Cargo.toml
crates/emend-ffi/src/: ai.rs  document.rs  error.rs  handles.rs  lib.rs  panic.rs  search.rs  settings.rs  watcher.rs  workspace.rs
crates/emend-ffi/tests/: panic_containment.rs
docs/demo-vault/: Diagrams & Math.md  Index.md  Reading List.md  Welcome.md
docs/demo-vault/Daily/: 2026-06-16.md  2026-06-17.md
docs/demo-vault/Projects/: Emend Launch.md  Q3 Roadmap.md
docs/screenshots/: cowork-capture-prompt.md
scripts/: build-xcframework.sh
specs/001-markdown-editor/: data-model.md  perf-report.md  plan.md  quickstart.md  research.md  security-review.md  spec.md  tasks.md
specs/001-markdown-editor/checklists/: requirements.md
specs/001-markdown-editor/contracts/: ffi-interface.md
specs/001-markdown-editor/retro/: P10.md  P2.md  P3.md  P4.md  P5.md  P6.md  P7.md  P8.md  P9.md
swift/EmendCore/: Package.swift
swift/EmendCore/Sources/EmendCore/: EmendCore.swift  Streaming.swift
swift/EmendCore/Tests/EmendCoreTests/: EmendCoreTests.swift  StreamingTests.swift
