# Emend ÔÇö Rust workspace
# Core engine (file IO, watching, indexing, Markdown parsing, search, AI client)
# behind a thin UniFFI shim consumed by the Swift/SwiftUI macOS app.
# See specs/001-markdown-editor/research.md (┬ºB8) for the layout rationale.

[workspace]
resolver = "2"
members = [
    "crates/emend-core",
    "crates/emend-ffi",
    "crates/emend-bench",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Emend"]
repository = ""

# ---------------------------------------------------------------------------
# Centralized, pinned dependency catalog (verified mid-2026 ÔÇö see research.md).
# These are INERT until a member opts in via `dep.workspace = true`, so the
# skeleton builds offline. /sdd:implement wires them into emend-core as features
# land. DO NOT bump from memory ÔÇö verify with `cargo update`/`npm view`-equivalent.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# async runtime + cancellation
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
# errors
thiserror = "2"
# shadow text buffer + UTF-16/line index for the per-keystroke editor hot path
# (research ┬ºA2/┬ºA3). Pinned to the latest STABLE release (1.6.1): its published
# manifest declares no rust-version, and the upstream master sets MSRV 1.65, so
# it sits comfortably under the workspace's pinned rust-version = "1.85" (the
# 2.0.0-beta line is a pre-release and is deliberately NOT used). Default
# features (`unicode_lines`, `simd`) are NOT inherited here ÔÇö emend-core opts in
# to `simd` only and drops `unicode_lines`/`cr_lines` so that only LF and CRLF
# count as line breaks, matching NSTextView/TextKit line semantics (see
# crates/emend-core/Cargo.toml).
ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
# markdown: incremental editor highlight + canonical preview.
#
# IMPORTANT ÔÇö version unification (verified 2026-06-17, not from memory):
# `tree-sitter-md` is the markdown grammar (formerly `tree-sitter-markdown`); it
# is a SPLIT parser exposing `MarkdownParser`/`MarkdownTree` over a block + an
# inline tree-sitter grammar. Its `MarkdownParser`/`MarkdownTree` wrapper lives
# behind the crate's `parser` feature, which is what pulls in the `tree-sitter`
# runtime ÔÇö so `features = ["parser"]` is REQUIRED, and the two crates MUST share
# a single semver-compatible `tree-sitter` (a 0.25-vs-0.26 split would compile
# two runtimes whose `Node`/`Tree` types can't interoperate).
#
# The original pins (`tree-sitter = "0.25"` + `tree-sitter-md = "0.5"`) do NOT
# unify: no published `tree-sitter-md 0.5.x` depends on tree-sitter 0.25
#   - tree-sitter-md 0.5.1 -> tree-sitter 0.24
#   - tree-sitter-md 0.5.2/0.5.3 -> tree-sitter 0.26
# `"0.5"` resolves to 0.5.3, which requires tree-sitter 0.26, so we align the
# runtime to 0.26 (MSRV 1.77, comfortably under the workspace's rust-version
# 1.85; cf. 0.24=1.65, 0.25=1.76 ÔÇö all fine, the constraint is unification not
# MSRV). emend-core enables the `parser` feature on tree-sitter-md below.
tree-sitter = "0.26"
tree-sitter-md = { version = "0.5", features = ["parser"] }
comrak = "0.52"
# code highlighting
syntect = "5.3"
# fuzzy search / quick open.
#
# `nucleo` (0.5) is the FULL engine: a worker threadpool + lock-free `Injector`
# for the later streaming, supersedable Quick Open *driver* (T073). The
# synchronous, in-memory workspace *index* (T058, this slice) needs only the
# matching primitive, so it pulls in the lighter sibling `nucleo-matcher`
# instead ÔÇö no threadpool, no async, keeping emend-core free of `tokio`
# (Constitution V). They share one matching core: `nucleo` itself depends on
# `nucleo-matcher ^0.3.1`, so pinning 0.3.1 here keeps the two unified.
#
# MSRV (verified 2026-06-17, not from memory): neither `nucleo` nor
# `nucleo-matcher` declares a `rust-version` in its published manifest, and both
# are edition-2021 crates with no edition-2024/`let`-chains/etc. usage ÔÇö they
# compile cleanly under the workspace's pinned rust-version = "1.85" (CI proves
# this with `cargo +1.85 check --all`). 0.3.1 is the latest non-yanked release.
nucleo = "0.5"
nucleo-matcher = "0.3.1"
# file watching (stay on 8.x; 9.0 is RC)
notify = "8.2"
notify-debouncer-full = "0.7"
# atomic+durable writes
tempfile = "3"
# AI / HTTP (BYOM, OpenAI-compatible, SSE streaming)
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# FFI binding generator (only emend-ffi depends on this)
uniffi = "0.31"
# benchmarking harness (dev-only, used by emend-bench; perf budgets are tracked
# but non-blocking ÔÇö see constitution). Stay on 0.7.x: 0.8+ raises the MSRV to
# 1.86, above the workspace's pinned rust-version = "1.85".
criterion = "0.7"

# ---------------------------------------------------------------------------
# Shared lint policy (NFR-003 / research ┬ºB7): no panics in the core.
# Inherited by each crate via `[lints] workspace = true`.
# ---------------------------------------------------------------------------
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.lints.rust]
unsafe_code = "warn"        # emend-ffi will locally allow where UniFFI requires it
missing_debug_implementations = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
