# Emend — Rust workspace
# Core engine (file IO, watching, indexing, Markdown parsing, search, AI client)
# behind a thin UniFFI shim consumed by the Swift/SwiftUI macOS app.
# See specs/001-markdown-editor/research.md (§B8) for the layout rationale.

[workspace]
resolver = "2"
members = [
    "crates/emend-core",
    "crates/emend-ffi",
    "crates/emend-bench",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Emend"]
repository = ""

# ---------------------------------------------------------------------------
# Centralized, pinned dependency catalog (verified mid-2026 — see research.md).
# These are INERT until a member opts in via `dep.workspace = true`, so the
# skeleton builds offline. /sdd:implement wires them into emend-core as features
# land. DO NOT bump from memory — verify with `cargo update`/`npm view`-equivalent.
# ---------------------------------------------------------------------------
[workspace.dependencies]
# async runtime + cancellation
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
# errors
thiserror = "2"
# shadow text buffer + UTF-16/line index for the per-keystroke editor hot path
# (research §A2/§A3). Pinned to the latest STABLE release (1.6.1): its published
# manifest declares no rust-version, and the upstream master sets MSRV 1.65, so
# it sits comfortably under the workspace's pinned rust-version = "1.85" (the
# 2.0.0-beta line is a pre-release and is deliberately NOT used). Default
# features (`unicode_lines`, `simd`) are NOT inherited here — emend-core opts in
# to `simd` only and drops `unicode_lines`/`cr_lines` so that only LF and CRLF
# count as line breaks, matching NSTextView/TextKit line semantics (see
# crates/emend-core/Cargo.toml).
ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
# markdown: incremental editor highlight + canonical preview.
#
# IMPORTANT — version unification (verified 2026-06-17, not from memory):
# `tree-sitter-md` is the markdown grammar (formerly `tree-sitter-markdown`); it
# is a SPLIT parser exposing `MarkdownParser`/`MarkdownTree` over a block + an
# inline tree-sitter grammar. Its `MarkdownParser`/`MarkdownTree` wrapper lives
# behind the crate's `parser` feature, which is what pulls in the `tree-sitter`
# runtime — so `features = ["parser"]` is REQUIRED, and the two crates MUST share
# a single semver-compatible `tree-sitter` (a 0.25-vs-0.26 split would compile
# two runtimes whose `Node`/`Tree` types can't interoperate).
#
# The original pins (`tree-sitter = "0.25"` + `tree-sitter-md = "0.5"`) do NOT
# unify: no published `tree-sitter-md 0.5.x` depends on tree-sitter 0.25
#   - tree-sitter-md 0.5.1 -> tree-sitter 0.24
#   - tree-sitter-md 0.5.2/0.5.3 -> tree-sitter 0.26
# `"0.5"` resolves to 0.5.3, which requires tree-sitter 0.26, so we align the
# runtime to 0.26 (MSRV 1.77, comfortably under the workspace's rust-version
# 1.85; cf. 0.24=1.65, 0.25=1.76 — all fine, the constraint is unification not
# MSRV). emend-core enables the `parser` feature on tree-sitter-md below.
tree-sitter = "0.26"
tree-sitter-md = { version = "0.5", features = ["parser"] }
# Preview Markdown→HTML engine (research §B1) — the AUTHORITATIVE renderer, a
# SEPARATE engine from the tree-sitter editor highlighter (never unified;
# Constitution / project guardrail). CommonMark + GFM + the native extensions
# §B1 calls for (wikilinks, ==highlight==→<mark>, tasklist).
#
# MSRV (verified 2026-06-17 against the crates.io index, not from memory):
# comrak 0.52.0 declares `rust-version = "1.85"` — exactly the workspace's pinned
# rust-version = "1.85" (CI proves it with `cargo +1.85.0 check --all`). 0.52.0 is
# the only published 0.52.x patch; 0.53+ raise the MSRV above 1.85, so stay on
# 0.52.x.
#
# `default-features = false` is LOAD-BEARING for both MSRV and the onig ban:
# comrak's `default` feature is `["cli", "syntect", "bon"]`, where
#   - `cli`     pulls clap → darling/time/plist (all rust-version > 1.85), and
#   - `syntect` pulls syntect with comrak's `regex-onig` variant (the C `onig`
#     library) — which would also feature-unify onig into OUR fancy-regex syntect.
# We need NEITHER: we call comrak as a library and do code highlighting with our
# OWN syntect (`parse::code_highlight`) wired in via comrak's plugin adapter, so
# we drop comrak's defaults entirely. This leaves just the CommonMark+GFM core
# (comrak has no `default`-gated parsing features), which is all `parse::preview`
# needs.
comrak = { version = "0.52", default-features = false }
# Code-block syntax highlighting for the PREVIEW (research §B6): given a fence
# language token + source, syntect emits CLASSED HTML (`ClassedHTMLGenerator`,
# `ClassStyle::Spaced`) plus the matching theme CSS, consumed by the WKWebView.
# A binary `SyntaxSet`/`ThemeSet` dump is vendored under
# `crates/emend-core/assets/` and lazily loaded ONCE — the hot path never parses
# raw YAML.
#
# Backend = `fancy-regex` (pure Rust), NOT the default `onig` (C library): this
# avoids a C toolchain/`build.rs` dependency and any `onig` build issues
# (the task explicitly permits this), and keeps the build portable. Hence
# `default-features = false` (drops the `regex-onig` default) + an explicit
# feature list: `parsing` + `html` for `ClassedHTMLGenerator`/CSS, `dump-load`
# for `from_uncompressed_data` on the hot path, `dump-create` for the vendored-
# dump generator (`examples/gen_syntect_dump.rs`), `default-syntaxes`/
# `default-themes` for `load_defaults_newlines`/`ThemeSet::load_defaults`, and
# `regex-fancy` for the pure-Rust regex engine.
#
# MSRV (verified 2026-06-17, not from memory): syntect 5.3.0 declares NO
# `rust-version`; it is an edition-2021 crate and, with the `fancy-regex`
# backend, its transitive deps build cleanly under the workspace's pinned
# rust-version = "1.85" (CI proves it with `cargo +1.85.0 check --all`).
syntect = { version = "5.3", default-features = false, features = [
    "parsing",
    "html",
    "dump-load",
    "dump-create",
    "default-syntaxes",
    "default-themes",
    "regex-fancy",
] }
# fuzzy search / quick open.
#
# `nucleo` (0.5) is the FULL engine: a worker threadpool + lock-free `Injector`
# for the later streaming, supersedable Quick Open *driver* (T073). The
# synchronous, in-memory workspace *index* (T058, this slice) needs only the
# matching primitive, so it pulls in the lighter sibling `nucleo-matcher`
# instead — no threadpool, no async, keeping emend-core free of `tokio`
# (Constitution V). They share one matching core: `nucleo` itself depends on
# `nucleo-matcher ^0.3.1`, so pinning 0.3.1 here keeps the two unified.
#
# MSRV (verified 2026-06-17, not from memory): neither `nucleo` nor
# `nucleo-matcher` declares a `rust-version` in its published manifest, and both
# are edition-2021 crates with no edition-2024/`let`-chains/etc. usage — they
# compile cleanly under the workspace's pinned rust-version = "1.85" (CI proves
# this with `cargo +1.85 check --all`). 0.3.1 is the latest non-yanked release.
nucleo = "0.5"
nucleo-matcher = "0.3.1"
# file watching (stay on 8.x; 9.0 is RC)
notify = "8.2"
notify-debouncer-full = "0.7"
# atomic+durable writes
tempfile = "3"
# AI / HTTP (BYOM, OpenAI-compatible, SSE streaming) — emend-ffi ONLY (the core
# stays reqwest-free, Constitution V).
#
# MSRV + TLS backend (verified 2026-06-17 against crates.io with the installed
# 1.85.0 toolchain, NOT from memory): `reqwest 0.13.4` + `hyper 1.10.1` build
# cleanly under the workspace's pinned rust-version = "1.85". TLS = the
# **macOS-native** backend (`native-tls` → Security framework via
# `security-framework 3.7.0`), deliberately NOT rustls/ring (avoids the
# ring/aws-lc MSRV churn the brief warns about). `default-features = false` drops
# `default-tls`/`http2`/`json`/etc.; we enable ONLY `stream` (the `bytes_stream()`
# SSE body) + `native-tls`. No blocking, no cookies. HTTP/1.1 is sufficient for
# OpenAI-compatible SSE; `http2` is intentionally left off to keep the feature
# surface (and MSRV exposure) minimal.
#
# IMPORTANT — `idna_adapter` pin (below) is LOAD-BEARING for the 1.85 MSRV: the
# default `idna_adapter 1.2.x` pulls `icu_* 2.x`, which require rustc 1.86. We
# pin `idna_adapter = "=1.1.0"` (its `unicode-*` backend has a lower MSRV) so the
# whole reqwest→url→idna tree builds under 1.85 (CI proves it).
reqwest = { version = "0.13", default-features = false, features = [
    "stream",
    "native-tls",
] }
# Pin `idna_adapter` to the pre-icu-2.x line so reqwest's url→idna transitive
# dependency stays ≤ MSRV 1.85 (see the reqwest note above). DO NOT bump without
# re-running `cargo +1.85.0 check --all`.
idna_adapter = "=1.1.0"
# `StreamExt::next` for draining reqwest's `bytes_stream()` (emend-ffi only). Already
# a transitive dep of reqwest, so this adds nothing to the tree; minimal `std`
# feature only (no executors). MSRV well under 1.85 (edition-2018, no rust-version).
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# FFI binding generator (only emend-ffi depends on this)
uniffi = "0.31"
# benchmarking harness (dev-only, used by emend-bench; perf budgets are tracked
# but non-blocking — see constitution). Stay on 0.7.x: 0.8+ raises the MSRV to
# 1.86, above the workspace's pinned rust-version = "1.85".
criterion = "0.7"

# ---------------------------------------------------------------------------
# Shared lint policy (NFR-003 / research §B7): no panics in the core.
# Inherited by each crate via `[lints] workspace = true`.
# ---------------------------------------------------------------------------
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[workspace.lints.rust]
unsafe_code = "warn"        # emend-ffi will locally allow where UniFFI requires it
missing_debug_implementations = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
