[package]
name = "emend-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Criterion micro-benchmarks for emend-core (perf budgets are tracked, non-blocking). Not published; carries no FFI dependency."
publish = false

[dependencies]
emend-core = { path = "../emend-core" }

[dev-dependencies]
criterion.workspace = true

# Smoke bench verifying the Criterion pipeline compiles & runs. Real benches
# (e.g. benches/quick_open.rs) land in later phases.
[[bench]]
name = "smoke"
harness = false

# Incremental editor-highlight perf (T037, SC-003): re-highlight one edited line
# in a ~1 MB / ~10k-line document. Tracked, non-blocking (perf budgets are
# tracked per the constitution).
[[bench]]
name = "highlight"
harness = false

# Quick Open search perf (T071, SC-004): rank + stream a query over a 10k-entry
# index, p95 ≤ 100 ms warm. Tracked, non-blocking (perf budgets are tracked per
# the constitution).
[[bench]]
name = "quick_open"
harness = false

# Cold-open perf (T131, SC-002): open + parse a ~1 MB / ~10k-line document so
# first paint lands within 500 ms p95. Tracked, non-blocking (perf budgets are
# tracked per the constitution).
[[bench]]
name = "open_doc"
harness = false

[lints]
workspace = true
