[package]
name = "emend-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Emend core engine: files, watching, indexing, Markdown parsing, search, AI client. No FFI dependency — fully testable with `cargo test`."

# NOTE: kept lean so the workspace builds/tests offline with no FFI toolchain.
# /sdd:implement adds further members of the catalog in the root
# [workspace.dependencies] as features land,
# e.g.:  tokio.workspace = true   comrak.workspace = true   nucleo.workspace = true
[dependencies]
# Error type ergonomics (Display/Error derive). Pure-Rust, no FFI dependency —
# the core MUST NOT depend on `uniffi` (Constitution V); the uniffi projection
# lives in emend-ffi.
thiserror.workspace = true
# Atomic+durable writes (FR-009a, research §B4): a sibling temp file in the
# target's directory is fsync'd then `persist`ed (atomic rename) over the target.
# Pure Rust, no `unsafe` at our call sites; the macOS durability guarantee comes
# from std `File::sync_all` → `fcntl(F_FULLFSYNC)` on Apple targets (see fs.rs).
tempfile.workspace = true
# Shadow rope for the document/editor hot path (research §A2/§A3). Backs the
# `Document` model: efficient incremental splices plus the UTF-16-code-unit ↔
# char ↔ (line, col) index the FFI boundary answers from. Pure Rust, no FFI dep.
# `unicode_lines`/`cr_lines` are intentionally disabled (only LF + CRLF are line
# breaks, matching NSTextView/TextKit); `simd` is kept for hot-path throughput.
ropey.workspace = true
# Incremental editor-highlight engine (research §B1) — the per-keystroke hot
# path, advisory-only and DISTINCT from the comrak preview engine (do not unify
# them, Constitution). `tree-sitter` is the parsing runtime; `tree-sitter-md` is
# the split markdown grammar whose `MarkdownParser`/`MarkdownTree` wrapper drives
# the block + inline trees and is gated behind its `parser` feature (enabled in
# the workspace catalog). Both share one semver-compatible tree-sitter runtime
# (see root Cargo.toml). Pure Rust + a C grammar; no FFI/uniffi dependency.
tree-sitter.workspace = true
tree-sitter-md.workspace = true
# Synchronous fuzzy-matching primitive for the workspace search index (research
# §B2, FR-017/FR-017a). The LIGHTER sibling of `nucleo` — it has NO worker
# threadpool and NO async, so the index stays a plain synchronous in-memory
# structure and emend-core stays free of `tokio` (Constitution V). The streaming
# Quick Open *driver* (T073) will use the full `nucleo` crate on top of this same
# matching core; both pin a single unified `nucleo-matcher` version (see the root
# catalog). Pure Rust, no FFI/uniffi dependency.
nucleo-matcher.workspace = true
# File watching (research §B3, FR-006/006a/006b/006c). `notify` is the recursive
# FSEvents watcher; `notify-debouncer-full` coalesces bursts and correlates
# rename/move via its `FileIdCache` (one rename event, not delete+create). Both
# use their OWN background threads (NOT tokio), so the core stays free of an async
# runtime (Constitution V) — `notify` posts events to a `std::sync::mpsc` channel
# we drain on a dedicated `std::thread`. Pure Rust, no FFI/uniffi dependency.
#
# MSRV (verified 2026-06-17 against the resolved 8.2.0 / 0.7.0 manifests, not from
# memory): `notify 8.2.0` declares `rust-version = "1.77"` and
# `notify-debouncer-full 0.7.0` declares `rust-version = "1.85"` — both ≤ the
# workspace's pinned rust-version = "1.85" (CI proves it with `cargo +1.85
# check --all`). Stay on notify 8.x; 9.0 is RC.
notify.workspace = true
notify-debouncer-full.workspace = true
# Preview Markdown→HTML engine (research §B1, FR-023..028) — the AUTHORITATIVE
# renderer, deliberately SEPARATE from the tree-sitter editor highlighter (never
# unified; Constitution / project guardrail). Drives `parse::preview`: CommonMark
# + GFM (tables, tasklist, strikethrough) + the native extensions wikilinks /
# `==highlight==`→`<mark>`, with `render.sourcepos` → per-block `data-line`
# anchors for scroll-sync (research §C3). Pure Rust, no FFI/uniffi/tokio dep.
comrak.workspace = true
# Code-block syntax highlighting for the preview (research §B6) — drives
# `parse::code_highlight`: a fenced block's language token + source → syntect
# CLASSED HTML (`ClassedHTMLGenerator`, `ClassStyle::Spaced`) + the matching
# theme CSS. Loads the vendored binary `SyntaxSet`/`ThemeSet` dump
# (`assets/syntaxes-themes.packdump`) exactly once via a `OnceLock`; the hot path
# never parses raw YAML. `fancy-regex` (pure-Rust) backend — no `onig` C build.
# Pure Rust, no FFI/uniffi/tokio dep.
syntect.workspace = true
# AI BYOM client — the PURE half (research §B5). `emend-core` owns the SSE event
# parser, the max-input guard (FR-036a), the redacting `ApiKey` newtype
# (NFR-006), and the request-body/headers BUILDERS (as data). It does NOT own the
# network: the `reqwest` + `tokio` streaming orchestration lives in `emend-ffi`
# so `emend-core` stays tokio-free AND reqwest-free (Constitution V; CI proves it
# with `cargo tree -p emend-core -i {tokio,reqwest,uniffi}` finding nothing).
# `serde`/`serde_json` are PURE, no-async, no-network crates used only to
# (de)serialize the OpenAI Chat-Completions JSON shapes.
#
# MSRV (verified 2026-06-17 against crates.io, not from memory): `serde 1.x` and
# `serde_json 1.x` are edition-2018 crates declaring no `rust-version` above the
# workspace's pinned rust-version = "1.85" (CI proves it with `cargo +1.85.0
# check --all`). Pure Rust, no FFI/uniffi/tokio/reqwest dependency.
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true

# Reproducible regenerator for the vendored binary syntect dump
# (`assets/syntaxes-themes.packdump`). Run:
#   cargo run --example gen_syntect_dump
# It loads syntect's default newline-sensitive SyntaxSet + default ThemeSet and
# serialises them with `dump_to_uncompressed_file` (NO flate2 at load time, so
# the hot-path `from_uncompressed_data` skips decompression). The dump is a
# COMMITTED asset (not a build-time artifact); rerun this only to refresh it.
[[example]]
name = "gen_syntect_dump"
path = "examples/gen_syntect_dump.rs"
