[package]
name = "emend-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Thin UniFFI shim over emend-core. The ONLY crate that depends on uniffi; keep it free of business logic (research §B8)."

[lib]
# staticlib for the XCFramework consumed by the Swift app; cdylib for bindgen.
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
emend-core = { path = "../emend-core" }
# The ONLY crate that depends on uniffi (Constitution V). Pure proc-macro mode:
# `#[uniffi::export]`, the `#[derive(uniffi::Error)]` projection, and
# `uniffi::setup_scaffolding!()` need NO build.rs and NO build-dependency — the
# `build` feature is only for UDL-driven crates (verified against
# mozilla/uniffi-rs v0.31.1: uniffi/Cargo.toml, examples/arithmetic-procmacro).
# Default feature `cargo-metadata` is kept on purpose: uniffi-bindgen-swift
# reads crate metadata when generating Swift bindings from the compiled library.
uniffi.workspace = true
# Used for the `#[derive(thiserror::Error)]` on the FFI error projection so the
# Swift-facing error keeps the same `Display` wording as the core type.
thiserror.workspace = true
# Async-infrastructure scaffolding (research §A1): the long-lived multi-thread
# runtime the core owns for cancellable AI/search work. Features come from the
# workspace catalog (rt-multi-thread, macros, time, sync). The runtime lives in
# emend-ffi (not emend-core) because it is part of the boundary's async wiring;
# emend-core stays toolchain-free for plain `cargo test` (Constitution V / §B8).
tokio.workspace = true
# `CancellationToken` backing the Rust-owned cancellation handles (research §A1).
tokio-util.workspace = true

[lints]
workspace = true
