[package]
name = "emend-ffi"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Thin UniFFI shim over emend-core. The ONLY crate that depends on uniffi; keep it free of business logic (research §B8)."

[lib]
# staticlib for the XCFramework consumed by the Swift app; cdylib for bindgen.
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
emend-core = { path = "../emend-core" }
# The ONLY crate that depends on uniffi (Constitution V). Pure proc-macro mode:
# `#[uniffi::export]`, the `#[derive(uniffi::Error)]` projection, and
# `uniffi::setup_scaffolding!()` need NO build.rs and NO build-dependency — the
# `build` feature is only for UDL-driven crates (verified against
# mozilla/uniffi-rs v0.31.1: uniffi/Cargo.toml, examples/arithmetic-procmacro).
# Default feature `cargo-metadata` is kept on purpose: uniffi-bindgen-swift
# reads crate metadata when generating Swift bindings from the compiled library.
uniffi.workspace = true
# Used for the `#[derive(thiserror::Error)]` on the FFI error projection so the
# Swift-facing error keeps the same `Display` wording as the core type.
thiserror.workspace = true
# Async-infrastructure scaffolding (research §A1): the long-lived multi-thread
# runtime the core owns for cancellable AI/search work. Features come from the
# workspace catalog (rt-multi-thread, macros, time, sync). The runtime lives in
# emend-ffi (not emend-core) because it is part of the boundary's async wiring;
# emend-core stays toolchain-free for plain `cargo test` (Constitution V / §B8).
tokio.workspace = true
# `CancellationToken` backing the Rust-owned cancellation handles (research §A1).
tokio-util.workspace = true
# AI BYOM HTTP client — the NETWORK half of the AI client (research §B5). Lives
# here (NOT emend-core) so the core stays reqwest-free (Constitution V; CI proves
# `cargo tree -p emend-core -i reqwest` finds nothing). The streaming summary
# orchestration drives `reqwest::bytes_stream()` through the core
# `emend_core::ai::SseParser`, with a per-chunk `tokio::time::timeout` inactivity
# guard + `CancellationToken`/`tokio::select!` cancellation. macOS-native TLS
# (`native-tls`), minimal features (see the workspace catalog note).
reqwest.workspace = true
# `StreamExt::next` to drain reqwest's `bytes_stream()` chunk-by-chunk.
futures-util.workspace = true
# OpenAI-compatible JSON shapes are built/parsed by the core (`emend_core::ai`);
# emend-ffi needs no serde directly, but `test_ai_config` reads a non-streaming
# response body (a plain `String`), so no serde dep is required here.

[dev-dependencies]
# Temp files for the read_file_at export round-trip test.
tempfile.workspace = true

[lints]
workspace = true
